# DataTransferringTool

./: .gitignore  LICENSE  README.md  README_zh.md  ThirdPartyNotices.txt  config.yaml  example_config.yaml  main.py  output.xlsx  pyproject.toml  transfer_report.xlsx
src/datatransferringtool/: __init__.py  cli.py  config.py  core.py  gui.py
