[project]
name = "datatransferringtool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "customtkinter>=5.2.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "thefuzz>=0.22.1",
    "typer>=0.24.1",
    "xlrd>=2.0.2",
    "xlwt>=1.3.0",
]

[project.scripts]
datatransfer = "datatransferringtool.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datatransferringtool"]
